Create basic page-structure

--- a/index.html
+++ b/index.html
@@ -10,11 +10,29 @@
     <meta name="keywords" content="">
     <meta name="author" content="Sophjan Moubarrid">
     <title>Deep Drop</title>
+    <!-- Boxicon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- My own css -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <section>
+        <div class="outer-box">
+            <div class="titel-box">
+                <p class="main-titel">Titel</p>
+                <i class='bx bx-info-circle'></i>
+            </div>
+
+            <div class="display-box">
+
+            </div>
+            <div class="button-box">
+
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
