--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
             </div>
 
             <div class="display-box">
-
+                <p>Test text</p>
             </div>
             <div class="button-box">
+                <div class="upper-section">
+                    <p>Button 1</p>
+                    <p>Button 2</p>
+                </div>
+                <div class="lower-section">
+                    <p>Button 3</p>
+                    <p>Button 4</p>
+                </div>
 
             </div>
         </div>
