Apply Font-styles on different elements

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
             <div class="display-box">
                 <p>Test text</p>
-                <div class="display hidden" id="player-stat-window"></div>
-                <div class="display hidden" id="player-skill-window"></div>
-                <div class="display hidden" id="player-fighting-style-window"></div>
-                <div class="display hidden" id="player-inventory-window"></div>
+                <div class="event-display hidden" id="player-stat-window"></div>
+                <div class="event-display hidden" id="player-skill-window"></div>
+                <div class="event-display hidden" id="player-fighting-style-window"></div>
+                <div class="event-display hidden" id="player-inventory-window"></div>
             </div>
 
             <div class="button-box">
