Add requirements for input-field

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             </div>
 
             <div class="button-box">
-                <input type="text" placeholder="Enter your player name" id="player-name-input">
-                <button id="start-button"> Start the Game</button>
+                <input type="text" placeholder="Enter your player name" id="player-name-input" minlength="1"
+                    maxlength="13" required>
+                <button type="submit" id="start-button"> Start the Game</button>
                 <button class="hidden" id="reward-button-one">Choose left</button>
                 <button class="hidden" id="reward-button-two">Choose right</button>
                 <button class="hidden" id="reward-button-three">Choose right</button>
