Create validation for User input

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="button-box">
                 <input type="text" placeholder="Enter your player name" id="player-name-input" minlength="1"
                     maxlength="13" required>
-                <button type="submit" id="start-button"> Start the Game</button>
+                <button type="submit" id="start-button" onclick="validateInput"> Start the Game</button>
                 <button class="hidden" id="reward-button-one">Choose left</button>
                 <button class="hidden" id="reward-button-two">Choose right</button>
                 <button class="hidden" id="reward-button-three">Choose right</button>
@@ -52,7 +52,8 @@
         </div>
     </section>
 
-
+    <!-- My Javascript -->
+    <script src="./assets/javascript/dom-manipulation.js"></script>
 </body>
 
 </html>
