--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             </div>
 
             <div class="button-box">
-                <input type="text" placeholder="Enter your player name" id="player-name-input" minlength="1"
-                    maxlength="13" required>
-                <button type="submit" id="start-button" onclick="validateInput"> Start the Game</button>
+                <p>Enter your characters name</p>
+                <input type="text" placeholder="Enter your player name" id="player-name-input" name="player-name-input"
+                    minlength="1" maxlength="13" required>
+                <button type="submit" id="start-button" onclick="validateInput()"> Start the Game</button>
+
                 <button class="hidden" id="reward-button-one">Choose left</button>
                 <button class="hidden" id="reward-button-two">Choose right</button>
                 <button class="hidden" id="reward-button-three">Choose right</button>
