--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="button-box">
-                <p>Enter your characters name</p>
+                <h2 id="input-title">Enter your characters name</h2>
                 <input type="text" placeholder="Enter your player name" id="player-name-input" name="player-name-input"
                     minlength="1" maxlength="13" required>
                 <button type="submit" id="start-button" onclick="validateInput()"> Start the Game</button>
