--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
             </div>
 
             <div class="button-box">
+                <!-- Start-Section -->
                 <h2 id="input-title">Enter your characters name</h2>
                 <input type="text" placeholder="Enter your player name" id="player-name-input" name="player-name-input"
                     minlength="1" maxlength="13" required>
                 <button type="submit" id="start-button" onclick="validateInput()"> Start the Game</button>
-
+                <!-- Reward Buttons -->
                 <button class="hidden" id="reward-button-one">Choose left</button>
                 <button class="hidden" id="reward-button-two">Choose right</button>
                 <button class="hidden" id="reward-button-three">Choose right</button>
+                <!-- Setting Buttons -->
                 <div class="upper-section">
                     <button class="hidden" id="player-stat-button">Button 1</button>
                     <button class="hidden" id="player-skill-button">Button 2</button>
