--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
     <section>
         <div class="outer-box">
             <div class="titel-box">
+                <button id="restart-button">Restart</button>
                 <p id="title-display">Deep Drop <span id="round-counter-display"></span></p>
                 <i class='bx bx-info-circle' id="information-icon"></i>
             </div>
 
-            <div class="display-box">
-                <p>Test text</p>
+            <div class=" display-box display-box-flex-column" id="display-box-section">
+                <h1 class="display-box-item">The Deep Drop</h1>
+                <h2 class="display-box-item">Welcome to the bottom of the well!</h2>
                 <div class="event-display hidden" id="player-stat-window"></div>
                 <div class="event-display hidden" id="player-skill-window"></div>
                 <div class="event-display hidden" id="player-fighting-style-window"></div>
                 <div class="event-display hidden" id="player-inventory-window"></div>
             </div>
 
-            <div class="button-box-flex-column" id="button-box">
+            <div class="button-box button-box-flex-column" id="button-box-section">
                 <!-- Start-Section -->
 
                 <h2 id="input-title">Enter your characters name</h2>
