--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <div class="outer-box">
             <div class="titel-box">
-                <button id="restart-button">Restart</button>
+                <button id="restart-button" onclick="confirmUserChoiceWindow()">Restart</button>
                 <p id="title-display">Deep Drop <span id="round-counter-display"></span></p>
                 <i class='bx bx-info-circle' id="information-icon"></i>
             </div>
