Destructure HTMl / Remove prewritten button

--- a/index.html
+++ b/index.html
@@ -35,27 +35,11 @@
             </div>
 
             <div class="button-box button-box-flex-column" id="button-box-section">
-                <!-- Start-Section -->
-
+                <!-- Start-Text -->
                 <h2 id="input-title">Enter your characters name</h2>
                 <input type="text" placeholder="Enter your player name" id="player-name-input" name="player-name-input"
                     minlength="1" maxlength="13" required>
                 <button type="submit" id="start-button" onclick="validateInput()"> Start the Game</button>
-
-                <!-- Reward Buttons -->
-                <button class="hidden" id="reward-button-one">Choose left</button>
-                <button class="hidden" id="reward-button-two">Choose middle</button>
-                <button class="hidden" id="reward-button-three">Choose right</button>
-                <!-- Setting Buttons -->
-                <div class="upper-section">
-                    <button class="hidden" id="player-stat-button">Button 1</button>
-                    <button class="hidden" id="player-skill-button">Button 2</button>
-                </div>
-                <div class="lower-section">
-                    <button class="hidden" id="player-fighting-style-button">Button 3</button>
-                    <button class="hidden" id="player-inventory-button"> Button 4</button>
-                </div>
-
             </div>
         </div>
     </section>
