--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
             </div>
 
             <div class=" display-box display-box-flex-column" id="display-box-section">
-                <h1 class="display-box-item">The Deep Drop</h1>
-                <h2 class="display-box-item">Welcome to the bottom of the well!</h2>
+                <h1 class="start-item">The Deep Drop</h1>
+                <h2 class="start-item">Welcome to the bottom of the well!</h2>
             </div>
 
             <div class="button-box button-box-flex-column" id="button-box-section">
                 <!-- Start-Text -->
-                <h2 id="input-title">Enter your characters name</h2>
-                <input type="text" placeholder="Enter your player name" id="player-name-input" name="player-name-input"
-                    minlength="1" maxlength="13" required>
-                <button type="submit" id="start-button" onclick="validateInput()"> Start the Game</button>
+                <h2 class="start-item" id="input-title">Enter your characters name</h2>
+                <input class="start-item" type="text" placeholder="Enter your player name" id="player-name-input"
+                    name="player-name-input" minlength="1" maxlength="13" required>
+                <button class="start-item" type="submit" id="start-button" onclick="validateInput()"> Start the
+                    Game</button>
             </div>
         </div>
     </section>
