--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <section>
         <div class="outer-box">
-            <div class="titel-box">
+            <div class="title-box">
                 <button id="restart-button" onclick="resetGame()">Restart</button>
                 <p id="title-display">Deep Drop <span id="round-counter-display"></span></p>
                 <i class='bx bx-info-circle' id="information-icon"></i>
