Connect JS - files with import/Export

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
 
     <!-- My Javascript -->
-    <script src="./assets/javascript/dom-manipulation.js"></script>
+    <script type="module" src="./assets/javascript/dom-manipulation.js"></script>
 </body>
 
 </html>
