--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Boxicon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- My own css -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
                 <h2 class="start-item" id="input-title">Enter your characters name</h2>
                 <input class="start-item" type="text" placeholder="Enter your player name" id="player-name-input"
                     name="player-name-input" minlength="1" maxlength="13" required>
-                <button class="start-item" type="submit" id="start-button" onclick="validateInput()"> Start the
+                <button class="start-item" type="submit" id="start-button"> Start the
                     Game</button>
             </div>
         </div>
