Beautify title-box with correct justify-content direction

--- a/index.html
+++ b/index.html
@@ -20,14 +20,21 @@
     <section>
         <div class="outer-box">
             <div class="title-box">
-                <button id="restart-button">Restart</button>
-                <p id="title-display">Deep Drop <span id="round-counter-display"></span></p>
-                <i class='bx bx-info-circle' id="information-icon"></i>
+                <div id="left-item">
+                    <button id="restart-button">Restart</button>
+                </div>
+                <div id="middle-item">
+                    <h1 id="title-display">Deep Drop</h1>
+                </div>
+                <div id="right-item">
+                    <i class='bx bx-info-circle' id="information-icon"></i>
+                </div>
+
             </div>
 
             <div class=" display-box display-box-flex-column" id="display-box-section">
-                <h1 class="start-item">The Deep Drop</h1>
-                <h2 class="start-item">Welcome to the bottom of the well!</h2>
+                <h2 class="start-item">The Deep Drop</h2>
+                <h3 class="start-item">Welcome to the bottom of the well!</h3>
             </div>
 
             <div class="button-box button-box-flex-column" id="button-box-section">
