--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <h1 id="title-display">Deep Drop</h1>
                 </div>
                 <div id="right-item">
-                    <i class='bx bx-info-circle' id="information-icon"></i>
+                    <button id="info-button">
+                        <i class='bx bx-info-circle' id="information-icon"></i>
+                    </button>
                 </div>
 
             </div>
