Write logic for Loading Screen (not implementet yet)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div id="loading-screen">Loading...</div>
     <section>
         <div class="outer-box">
             <div class="title-box">
