--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="loading-screen">Loading...</div>
     <section>
-        <div class="outer-box">
+        <main class="outer-box">
             <div class="title-box">
                 <div id="left-item">
                     <button id="restart-button">Restart</button>
@@ -48,7 +48,11 @@
                 <button class="start-item" type="submit" id="start-button"> Start the
                     Game</button>
             </div>
-        </div>
+        </main>
+        <footer id="main-footer">
+            <p class="text-font">&copy; 2024 Deep Drop | All Rights Reserved.</p>
+        </footer>
+
     </section>
 
     <!-- My Javascript -->
