Add Input Wrapper

--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
             <div class="button-box button-box-flex-column" id="button-box-section">
                 <!-- Start-Text -->
                 <h2 class="start-item" id="input-title">Enter your characters name</h2>
-                <div class="input-container">
-                    <input class="start-item" type="text" placeholder="Enter your player name" id="player-name-input"
-                        name="player-name-input" minlength="1" maxlength="13" required>
-                    <span id="error-message" class="error-message">Please enter a valid name!</span>
+                <div class="input-wrapper">
+                    <div class="input-container">
+                        <input class="start-item" type="text" placeholder="Enter your player name"
+                            id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required>
+                        <span id="error-message" class="error-message">Please enter a valid name!</span>
+                    </div>
                 </div>
+
 
                 <button class="start-item" type="submit" id="start-button"> Start the
                     Game</button>
