Edit placeholder and input

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="input-container">
                         <input class="start-item" type="text" placeholder="Enter your player name"
                             id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required>
-                        <span id="error-message" class="error-message">Please enter a valid name!</span>
+                        <span id="error-message" class="error-message start-item">Please enter a valid name!</span>
                     </div>
                 </div>
 
