Put Title back into title box

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 <body>
 
     <section>
+        <header>
+
+        </header>
         <main class="outer-box">
             <div class="title-box">
                 <div id="left-item">
-                    <button id="restart-button">Restart</button>
+                    <button id="restart-button" class="hidden">Restart</button>
                 </div>
                 <div id="middle-item">
                     <h1 id="title-display">Deep Drop</h1>
@@ -44,7 +47,7 @@
             <div class="button-box button-box-flex-column" id="button-box-section">
                 <!-- Start-Text -->
                 <h2 class="start-item" id="input-title">Enter your characters name</h2>
-                <div class="input-wrapper">
+                <div class="input-wrapper start-item">
                     <div class="input-container">
                         <input class="start-item" type="text" placeholder="Enter your player name"
                             id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required>
