--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main class="outer-box">
             <div class="title-box">
                 <div id="left-item">
-                    <button id="restart-button" class="hidden">Restart</button>
+                    <button id="restart-button" class="hidden">Restart Game</button>
                 </div>
                 <div id="middle-item">
                     <h1 id="title-display">Deep Drop</h1>
