Insert aditional tutorial button into display box

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <div id="loading-screen">Loading...</div>
                 <h2 class="start-item">The Deep Drop</h2>
                 <h3 class="start-item">Welcome to the bottom of the well!</h3>
+                <button class="start-item" id="inner-info-button">How to play</button>
             </div>
 
             <div class="button-box button-box-flex-column" id="button-box-section">
@@ -53,8 +54,6 @@
                             id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required>
                     </div>
                 </div>
-
-
                 <button class="start-item" type="submit" id="start-button"> Start the
                     Game</button>
             </div>
