Add classes and css rules to tutorial-buttons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div id="right-item">
                     <button id="info-button">
-                        <i class='bx bx-info-circle' id="information-icon"></i>
+                        <i class='bx bx-info-circle tutorial-button hidden' id="information-icon"></i>
                     </button>
                 </div>
 
@@ -42,7 +42,7 @@
                 <div id="loading-screen">Loading...</div>
                 <h2 class="start-item">The Deep Drop</h2>
                 <h3 class="start-item">Welcome to the bottom of the well!</h3>
-                <button class="start-item" id="inner-info-button">How to play</button>
+                <button class="start-item tutorial-button" id="inner-info-button">How to play</button>
             </div>
 
             <div class="button-box button-box-flex-column" id="button-box-section">
