--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <main class="outer-box">
             <div class="title-box">
                 <div id="left-item">
-                    <button id="restart-button" class="hidden">Restart Game</button>
+                    <button id="restart-button" class="hidden title-box-button">Restart Game</button>
                 </div>
                 <div id="middle-item">
                     <h1 id="title-display">Deep Drop</h1>
                 </div>
                 <div id="right-item">
-                    <button id="info-button">
-                        <i class='bx bx-info-circle tutorial-button hidden' id="information-icon"></i>
+                    <button id="info-button" class="title-box-button">
+                        <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"></i>
                     </button>
                 </div>
 
