Replace section with a div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <section>
+    <div>
         <header>
 
         </header>
@@ -61,7 +61,7 @@
             <p class="text-font">&copy; 2024 Deep Drop | All Rights Reserved.</p>
         </footer>
 
-    </section>
+    </div>
 
     <!-- My Javascript -->
     <script type="module" src="./assets/javascript/dom-manipulation.js"></script>
