Remove double elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section>
+    <div>
         <main class="outer-box">
             <div class="title-box">
                 <div id="left-item">
@@ -27,11 +27,9 @@
                     <h1 id="title-display">Deep Drop</h1>
                 </div>
                 <div id="right-item">
-                    <button id="info-button">
-                        <i class='bx bx-info-circle tutorial-button hidden' id="information-icon"></i>
-                        <button id="info-button" class="title-box-button" aria-label="Open Tutorial">
-                            <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"></i>
-                        </button>
+                    <button id="info-button" class="title-box-button" aria-label="Open Tutorial">
+                        <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"></i>
+                    </button>
                 </div>
 
             </div>
@@ -57,7 +55,7 @@
         <footer id="main-footer">
             <p class="text-font">&copy; 2024 Deep Drop | All Rights Reserved.</p>
         </footer>
-    </section>
+    </div>
     <!-- My Javascript -->
     <script type="module" src="./assets/javascript/dom-manipulation.js"></script>
 </body>
