Remove aria label from icon

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 </div>
                 <div id="right-item">
                     <button id="info-button" class="title-box-button" aria-label="Open Tutorial">
-                        <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"
-                            aria-label="Open Tutorial"></i>
+                        <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"></i>
                     </button>
                 </div>
 
