Add defeault name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <div class="input-wrapper start-item">
                     <div class="input-container">
                         <input class="start-item" type="text" placeholder="Enter your player name"
-                            id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required>
+                            id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required
+                            value="Iman">
                     </div>
                 </div>
                 <button class="start-item" type="submit" id="start-button" aria-label="Start the game"> Start the
