Change defeault Name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="input-container">
                         <input class="start-item" type="text" placeholder="Enter your player name"
                             id="player-name-input" name="player-name-input" minlength="1" maxlength="13" required
-                            value="Iman">
+                            value="WhoAmI">
                     </div>
                 </div>
                 <button class="start-item" type="submit" id="start-button" aria-label="Start the game"> Start the
