--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Boxicon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- My own css -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         </footer>
     </div>
     <!-- My Javascript -->
-    <script type="module" src="./assets/javascript/script.js"></script>
+    <script type="module" src="assets/javascript/script.js"></script>
 </body>
 
 </html>
