Add mute button and mute logic

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <h1 id="title-display">Deep Drop</h1>
                 </div>
                 <div id="right-item">
+                    <button id="toggle-music-button" class="title-box-button hidden" aria-label="Toggle Music">
+                        <i class='bx bx-volume-mute' id="music-icon"></i>
+                    </button>
+
                     <button id="info-button" class="title-box-button" aria-label="Open Tutorial">
                         <i class='bx bx-info-circle tutorial-button hidden ' id="information-icon"></i>
                     </button>
